@@ -23,7 +23,7 @@ echo "------------------------------------------------------------------"
 dnl ---
 dnl Init automake
 dnl ---
-AM_INIT_AUTOMAKE(ecasound, 2.3.0)
+AM_INIT_AUTOMAKE(ecasound, 2.3.1)
 AM_CONFIG_HEADER(config.h)
 
 dnl ---
